# ASCII-Encoder-and-Decoder

./: .gitignore  CMakeLists.txt  README.md  build.bat  vcpkg.json
src/: codec.h  main.cpp  simple_test.cpp  test_codec.cpp
